# imageDeinterlacing

./: README.md  docker-compose.yml
deinterlacer/: CMakeLists.txt  Dockerfile
deinterlacer/include/: deinterlace.h  jpegObj.h
deinterlacer/src/: deinterlace.cpp  jpegObj.cpp  main.cpp
